Fix large gap before paragraphics.

--- a/app/assets/stylesheets/content.css.scss
+++ b/app/assets/stylesheets/content.css.scss
@@ -28,6 +28,11 @@ a.dropdown-trigger {
   border: solid 1px transparent;
 }
 
+p {
+  margin: 0 0 11px;
+  font-size: 14px;
+  line-height: 22px;
+}
 
 .light {
   color: #9a9994;
